--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
 <header class="hero">
@@ -16,8 +17,70 @@
     <p class="hero__text">
         O maior evento de tecnologia do Brasil começa em 10d 21h 56s
     </p>
+    <div class="infos-bar">
+        <ul class="infos-bar__infos">
+            <li class="infos-bar__infos__item">
+                <b>Localização</b>
+                Allianz Park - Barra Funda - São Paulo
+            </li>
+            <li class="infos-bar__infos__item">
+                <b>Preço</b>
+                A partir de R$120,00
+            </li>
+            <li class="infos-bar__infos__item">
+                <b>Quando</b>
+                12/12/2024 às 19hrs
+            </li>
+        </ul>
+        <a class="button button--primary" href="#">Garanta sua vaga</a>
+    </div>
     </div>
 </header>
+<section class="event event--frontend" >
+    <div class="container" data-aos="fade-right">
+        <div class="event__details">
+            <h2 class="event__details__title">Frontend</h2>
+            <p class="event__details__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus natus et unde ut recusandae nihil aliquid obcaecati rerum nisi velit! Rem suscipit illum unde doloremque in repellat cupiditate quasi magni!
+            </p>
+        </div>
+        <img class="event__image" src="/src/images/frontend.png" alt="front-end">
+    </div>
+</section>
+<section class="event event--ui-ux event--image-left" >
+    <div class="container" data-aos="fade-left">
+        <div class="event__details">
+            <h2 class="event__details__title">UI/UX</h2>
+            <p class="event__details__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus natus et unde ut recusandae nihil aliquid obcaecati rerum nisi velit! Rem suscipit illum unde doloremque in repellat cupiditate quasi magni!
+            </p>
+        </div>
+            <img class="event__image" src="/src/images/ui-ux.png" alt="front-end">
+    </div>
+</section>
+<section class="event event--data-science">
+    <div class="container" data-aos="fade-right">
+        <div class="event__details">
+            <h2 class="event__details__title">Data Science</h2>
+            <p class="event__details__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus natus et unde ut recusandae nihil aliquid obcaecati rerum nisi velit! Rem suscipit illum unde doloremque in repellat cupiditate quasi magni!
+            </p>
+        </div>
+        <img class="event__image" src="/src/images/data.png" alt="front-end">
+    </div>
+</section>
+<section class="event event--backend event--image-left">
+    <div class="container" data-aos="fade-left">
+        <div class="event__details">
+            <h2 class="event__details__title">Backend</h2>
+            <p class="event__details__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus natus et unde ut recusandae nihil aliquid obcaecati rerum nisi velit! Rem suscipit illum unde doloremque in repellat cupiditate quasi magni!
+            </p>
+        </div>
+        <img class="event__image" src="/src/images/backend.png" alt="front-end">
+    </div>
+</section>
 </body>
-<script src="./scripts/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="./scripts/main.js"></script>
 </html>
